src/unit_tests/TypeChecker/success/let3.cl
class Main inherits IO {
    main() : Int {
        {
            let x : Int <- 1, y : Int <- x + 1 in 5;
            1;
        }
    };
};