src/unit_tests/TypeChecker/fail/case.cl
class Main {
    main(): Int {{
        case 5 of
            x : Int => x + 1;
            y : Int => y;
        esac;
        1;
    }};
};